se agregan endpoin de lista por email, mejora en carga de archivos y reestructuracion del proyecto